--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+    <title>Landing Page</title>
 </head>
 <body>
-    <h1>INTEX baby</h1>
+    <nav class="navbar sticky-top navbar-light bg-light navbar navbar-expand-lg navbar-light bg-light" >
+        <a class="navbar-brand">Provo City</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+
+                <!-- Home button -->
+                <li class="nav-item active">
+                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                </li>
+
+                <!-- Survey button -->
+                <li class="nav-item active">
+                    <a class="nav-link" href="/survey">Take Our Survey<span class="sr-only">(current)</span></a>
+                </li>
+
+                <!-- Dashboard button -->
+                <li class="nav-item active">
+                    <a class="nav-link" href="/dashboard">See Statistics<span class="sr-only">(current)</span></a>
+                </li>
+
+            </ul>
+            <!-- Login -->
+            <li class="nav-item ml-auto">
+            <a class="nav-link" href="/login">Login</a>
+            </li>
+        </div>
+    </nav>
 </body>
 </html>
