--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,6 +9,12 @@
     <title>Landing Page</title>
 </head>
 <body>
+    <style>
+        .nav-item {
+        list-style: none;
+        }
+    </style>
+    
     <nav class="navbar sticky-top navbar-light bg-light navbar navbar-expand-lg navbar-light bg-light" >
         <a class="navbar-brand">Provo City</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
