--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,13 +8,20 @@
 
     <title>Landing Page</title>
 </head>
+
 <body>
+    <h1>Create a website that gathers information from Provo citizens about 
+        their social media usage and mental health. Currently the only data on 
+        this topic available to Provo is the data provided by Plainsville. 
+        For future analysis, Provo wants to gather data from their own citizens. 
+        The website should have a form that asks the same questions that are in 
+        the dataset shared by Plainsville .</h1>
     <style>
         .nav-item {
         list-style: none;
         }
     </style>
-    
+
     <nav class="navbar sticky-top navbar-light bg-light navbar navbar-expand-lg navbar-light bg-light" >
         <a class="navbar-brand">Provo City</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
