--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,8 +6,25 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-        
-    </script>
+    <div class="jumbotron jumbotron-fluid" style="background-image: linear-gradient(to bottom, rgba(255,255,255,0.9) 0%,rgba(255,255,255,0.6) 100%), url(/resources/laladancedesign_logo.png)">
+        <div class="row mt-5 justify-content-center" style="opacity: 0.7;">
+            <div class="contact-form section-sm p-5 cta bg-light">
+                <h1>Log in</h1>
+                <br>
+                <p id="warning_id"></p>
+                <form action="">
+                    <label for="username">Username</label>
+                    <Input></Input>
+                    <br>
+                    <br>
+                    <label for="password">Password</label>
+                    <Input></Input>
+                </form>
+                <br>
+                <div class="container">
+                    <button type="submit" id="adminLogIn" name="adminLogIn" class="btn btn-outline-primary">Log In</button>
+                </div>
+            </div>
+        </div>
 </body>
 </html>
