--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,13 +12,13 @@
                 <h1>Log in</h1>
                 <br>
                 <p id="warning_id"></p>
-                <form action="">
+                <form action="/loginsubmit" method="post">
                     <label for="username">Username</label>
                     <Input></Input>
                     <br>
                     <br>
                     <label for="password">Password</label>
-                    <Input></Input>
+                    <Input type="submit" value="Log In"></Input>
                 </form>
                 <br>
                 <div class="container">
