changed wording on scale

--- a/views/survey.ejs
+++ b/views/survey.ejs
@@ -172,8 +172,8 @@
             <br>
             <div style="text-align:left ; max-width: 400px; margin: 10;">
                 <div style="display: flex; justify-content: space-between; margin-bottom: 10px;">
-                    <span>Not Easily Distracted</span>
-                    <span>Very Easily Distracted</span>
+                    <span>Not Distracted</span>
+                    <span>Easily Distracted</span>
                 </div>
                 <div style="display: flex; justify-content: space-between; margin-bottom: 10px;">
                     <label style="flex: 1; text-align: center;">
@@ -224,8 +224,8 @@
             <br>
             <div style="text-align:left ; max-width: 400px; margin: 10;">
                 <div style="display: flex; justify-content: space-between; margin-bottom: 10px;">
-                    <span>Easy to Concentrate</span>
-                    <span>Can't Concentrate</span>
+                    <span>Very Easy</span>
+                    <span>Very Difficult</span>
                 </div>
                 <div style="display: flex; justify-content: space-between; margin-bottom: 10px;">
                     <label style="flex: 1; text-align: center;">
@@ -401,6 +401,8 @@
                     </label>
                 </div>
             </div> 
+
+            <button type="submit">Submit</button>
         </fieldset>
     </form>
     
