--- a/views/createAcc.ejs
+++ b/views/createAcc.ejs
@@ -6,6 +6,32 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="jumbotron jumbotron-fluid" style="background-image: linear-gradient(to bottom, rgba(255,255,255,0.9) 0%,rgba(255,255,255,0.6) 100%), url(/resources/laladancedesign_logo.png)">
+        <div class="row mt-5 justify-content-center" style="opacity: 0.7;">
+            <div class="contact-form section-sm p-5 cta bg-light">
+                <h1>Create an Account</h1>
+                <br>
+                <p id="warning_id"></p>
+                <form action="/loginsubmit" method="POST">
+                    <label for="username">First Name</label>
+                    <Input type="text" id="login_firstname" name="login_firstname"></Input>
+                    <br>
+                    <br>
+                    <label for="username">Last Name</label>
+                    <Input type="text" id="login_lastname" name="login_lastname"></Input>
+                    <br>
+                    <br>
+                    <label for="username">Username</label>
+                    <Input type="text" id="login_username" name="login_username"></Input>
+                    <br>
+                    <br>
+                    <label for="password">Password</label>
+                    <Input type="text" id="login_password" name="login_password"></Input>
+                    <br>
+                    <br>
+                    <Input type="submit" value="Log In"></Input>
+                </form>
+            </div>
+        </div>
 </body>
 </html>
