create account submission routing

--- a/views/createAcc.ejs
+++ b/views/createAcc.ejs
@@ -12,12 +12,12 @@
                 <h1>Create an Account</h1>
                 <br>
                 <p id="warning_id"></p>
-                <form action="/loginsubmit" method="POST">
-                    <label for="username">First Name</label>
+                <form action="/createAccSubmit" method="POST">
+                    <label for="FirstName">First Name</label>
                     <Input type="text" id="login_firstname" name="login_firstname"></Input>
                     <br>
                     <br>
-                    <label for="username">Last Name</label>
+                    <label for="LastName">Last Name</label>
                     <Input type="text" id="login_lastname" name="login_lastname"></Input>
                     <br>
                     <br>
