--- a/views/createAcc.ejs
+++ b/views/createAcc.ejs
@@ -12,7 +12,7 @@
                 <h1>Create an Account</h1>
                 <br>
                 <p id="warning_id"></p>
-                <form action="/createAccSubmit" method="POST">
+                <form action="/createAccSubmission" method="POST">
                     <label for="FirstName">First Name</label>
                     <Input type="text" id="login_firstname" name="login_firstname"></Input>
                     <br>
