--- a/views/modifyAcc.ejs
+++ b/views/modifyAcc.ejs
@@ -34,7 +34,7 @@
             </div>
         </div>
         <script>
-            document.getElementById("login_firstname").value = 
+            document.getElementById("login_firstname").value = user.
         </script>
 </body>
 </html>
