--- a/views/modifyAcc.ejs
+++ b/views/modifyAcc.ejs
@@ -11,6 +11,12 @@
             <div class="contact-form section-sm p-5 cta bg-light">
                 <h1>Create an Account</h1>
                 <br>
+                <!-- <select name="cars" id="cars">
+                    <option value="volvo">Volvo</option>
+                    <option value="saab">Saab</option>
+                    <option value="mercedes">Mercedes</option>
+                    <option value="audi">Audi</option>
+                  </select> -->
                 <p id="warning_id"></p>
                 <form action="/modifyAcc" method="POST">
                     <label for="FirstName">First Name</label>
@@ -34,7 +40,7 @@
             </div>
         </div>
         <script>
-            document.getElementById("login_firstname").value = user.
+            document.getElementById("login_firstname").value
         </script>
 </body>
 </html>
