home page changes

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,26 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Landing Page</title>
 </head>
 
 <body>
-    <h1>Create a website that gathers information from Provo citizens about 
-        their social media usage and mental health. Currently the only data on 
-        this topic available to Provo is the data provided by Plainsville. 
-        For future analysis, Provo wants to gather data from their own citizens. 
-        The website should have a form that asks the same questions that are in 
-        the dataset shared by Plainsville .</h1>
     <style>
         .nav-item {
         list-style: none;
         }
     </style>
-
-    <nav class="navbar sticky-top navbar-light bg-light navbar navbar-expand-lg navbar-light bg-light" >
+    <nav class="navbar sticky-top navbar-expand-lg navbar bg-primary" data-bs-theme="dark">
         <a class="navbar-brand">Provo City</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -33,17 +25,12 @@
 
                 <!-- Home button -->
                 <li class="nav-item active">
-                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-                </li>
-
-                <!-- Survey button -->
-                <li class="nav-item active">
-                    <a class="nav-link" href="/survey">Take Our Survey<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/">Home <span class="sr-only"></span></a>
                 </li>
 
                 <!-- Dashboard button -->
                 <li class="nav-item active">
-                    <a class="nav-link" href="/dashboard">See Statistics<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/dashboard">Why Mental Health?<span class="sr-only"></span></a>
                 </li>
 
             </ul>
@@ -53,5 +40,12 @@
             </li>
         </div>
     </nav>
+    <br>
+    <h1 class="text-center fs-1 fw-bold">"Social media are responsible for aggravating mental health problems." <br> National Institute of Health</h1>
+    <div class="d-grid gap-2">
+        <a href="/survey" class="btn btn-outline-success" role="button" data-bs-toggle="button">Take Mental Health Survey</a>
+    </div>
+
+    
 </body>
 </html>
