--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,7 +18,7 @@
                     <br>
                     <br>
                     <label for="password">Password</label>
-                    <Input type="text" id="login_password" name="login_password"></Input>
+                    <Input type="password" id="login_password" name="login_password"></Input>
                     <br>
                     <br>
                     <Input type="submit" value="Log In"></Input>
