--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,6 +6,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Landing Page</title>
+    <link rel="icon" href="/resources/Current_flag_of_Provo,_Utah.svg.png" sizes="25x25" type="image/x-icon">
 </head>
 
 <body>
@@ -14,8 +15,9 @@
         list-style: none;
         }
     </style>
+    <h2 class="p-3 bg-opacity-10 fs-6 fw-lighter text-center">Provo Social Media Usage and Mental Health Committee</h2>
     <nav class="navbar sticky-top navbar-expand-lg navbar bg-primary" data-bs-theme="dark">
-        <a class="navbar-brand">Provo City</a>
+        <a class="navbar-brand">Provo</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
@@ -35,17 +37,19 @@
 
             </ul>
             <!-- Login -->
-            <li class="nav-item ml-auto">
+            <li class="nav-item mx-auto p-3">
             <a class="nav-link" href="/login">Login</a>
             </li>
         </div>
     </nav>
     <br>
-    <h1 class="text-center fs-1 fw-bold">"Social media are responsible for aggravating mental health problems." <br> National Institute of Health</h1>
+    <h1 class="text-center fs-1 fw-bold">
+        Improving the mental health of all citizens of Provo, Utah
+    </h1>
     <div class="d-grid gap-2">
-        <a href="/survey" class="btn btn-outline-success" role="button" data-bs-toggle="button">Take Mental Health Survey</a>
+        <a href="/survey" class="btn btn-outline-primary" role="button" data-bs-toggle="button">Mental Health Survey</a>
     </div>
-
-    
+    <br>
+    <h1 class="text-center fs-3 fw-bold">"Social media are responsible for aggravating mental health problems." <br> National Institute of Health</h1>
 </body>
 </html>
