--- a/views/survey.ejs
+++ b/views/survey.ejs
@@ -89,6 +89,36 @@
             </form>
             <br><br>
             <label>What social media platforms do you commonly use?</label>
+                <form>
+                    <br>
+                    <input type="checkbox" id="cbUni" name="organization_name" value="University">
+                    <label>Discord</label>
+                    <br>
+                    <input type="checkbox" id="cbPrivate" name="organization_name" value="Private">
+                    <label>Facebook</label>
+                    <br>
+                    <input type="checkbox" id="cbSchool" name="organization_name" value="School">
+                    <label>Instagram</label>
+                    <br>
+                    <input type="checkbox" id="cbCompany" name="organization_name" value="Company">
+                    <label>Pinterest</label>
+                    <br>
+                    <input type="checkbox" id="cbGovernment" name="organization_name" value="Government">
+                    <label>Reddit</label>
+                    <br>
+                    <input type="checkbox" id="cbNone" name="organization_name" value="N/A">
+                    <label>Snapchat</label>
+                    <br>
+                    <input type="checkbox" id="cbGovernment" name="organization_name" value="Government">
+                    <label>TikTok</label>
+                    <br>
+                    <input type="checkbox" id="cbGovernment" name="organization_name" value="Government">
+                    <label>Twitter</label>
+                    <br>
+                    <input type="checkbox" id="cbGovernment" name="organization_name" value="Government">
+                    <label>Youtube</label>
+                    <br>
+                </form>
             <br><br>
             <label>What is the average time you spend on social media every day?</label>
             <select id="avgTime" name="avg_daily_sm_use">
