--- a/views/home.ejs
+++ b/views/home.ejs
@@ -44,10 +44,11 @@
     </nav>
     <br>
     <h1 class="text-center fs-1 fw-bold">
-        Improving the mental health of all citizens of Provo, Utah
+        Improving the mental health of all citizens of Provo, Utah <br>
+        through social media regulation
     </h1>
-    <div class="d-grid gap-2">
-        <a href="/survey" class="btn btn-outline-primary" role="button" data-bs-toggle="button">Mental Health Survey</a>
+    <div class="d-grid gap-2 col-6 mx-auto">
+        <a href="/survey" class="btn btn-outline-primary " role="button" data-bs-toggle="button">Mental Health Survey</a>
     </div>
     <br>
     <h1 class="text-center fs-3 fw-bold">"Social media are responsible for aggravating mental health problems." <br> National Institute of Health</h1>
