--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,5 +25,15 @@
                 </form>
             </div>
         </div>
+        <script>
+            function ShowPassword() {
+                var x = document.getElementById("login_password");
+                if (x.type === "password") {
+                    x.type = "text";
+                } else {
+                    x.type = "password";
+                }
+            }
+        </script>
 </body>
 </html>
