--- a/views/modifyAcc.ejs
+++ b/views/modifyAcc.ejs
@@ -34,7 +34,7 @@
                     <br>
                     <label for="password">Password</label>
                     <input type="text" id="login_password" name="login_password" value="<%= user[0].password%>">
-                    <input type="checkbox" onclick="ShowPassword(login_password)">Show Password
+                    <input type="checkbox" onclick="ShowPassword()">Show Password
                     <br>
                     <br>
                     <input type="submit" value="Log In"></Input>
@@ -42,5 +42,15 @@
                 
             </div>
         </div>
+        <script>
+            function ShowPassword() {
+                var x = document.getElementById("login_password");
+                if (x.type === "password") {
+                    x.type = "text";
+                } else {
+                    x.type = "password";
+                }
+            }
+        </script>
 </body>
 </html>
