--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,6 +19,7 @@
                     <br>
                     <label for="password">Password</label>
                     <Input type="password" id="login_password" name="login_password"></Input>
+                    <input type="checkbox" onclick="ShowPassword()">Show Password
                     <br>
                     <br>
                     <Input type="submit" value="Log In"></Input>
