--- a/views/home.ejs
+++ b/views/home.ejs
@@ -47,32 +47,46 @@
     </nav>
     <br>
     <h1 class="text-center fs-1 fw-bold">
-        Improving the mental health of all citizens of Provo, Utah <br>
-        through social media regulation
+        Imroving Mental Health Together
     </h1>
-    <div class="d-grid gap-2 col-6 mx-auto">
-        <a href="/survey" class="btn btn-outline-primary " role="button" data-bs-toggle="button">Mental Health Survey</a>
-    </div>
     <br>
-    <h1 class="text-center fs-3 fw-bold">Find Events on Mental Health Near You</h1>
+    <div class="card mx-auto" style="width: 18rem;">
+        <img src="/resources/Current_flag_of_Provo,_Utah.svg.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title text-center">Help Us Help You</h5>
+          <p class="card-text text-center">Please take this survey that explores the relationship between social media and mental health in Provo</p>
+          <div class="d-grid gap-2 col-6 mx-auto">
+            <a href="/survey" class="btn btn-outline-primary " role="button" data-bs-toggle="button">Mental Health Survey</a>
+            </div>
+        </div>
+      </div>
+    
     <br>
-    <div id="carouselExample" class="carousel-container slide mx-auto" data-bs-ride="carousel">
+    <h1 class="text-center fs-3 fw-bold">Worried? Stressed? Tired? <br> </h1>
+    <h2 class ="text-center fs-4 fw-bold">Find Events on Mental Health Near You</h2>
+    <br>
+    <div id="carouselExampleDark" class="carousel carousel-dark slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="/resources/https___cdn.evbuc.com_images_596145489_223287819690_1_original.jpg" class="d-block w-50" alt="firstSlide">
+          <div class="carousel-item active" data-bs-interval="10000">
+            <img src="/resources/https___cdn.evbuc.com_images_641653599_868515626953_1_original.jpg" class="d-block w-100" alt="Slide 1">
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="/resources/https___cdn.evbuc.com_images_641653599_868515626953_1_original.jpg" class="d-block w-100" alt="Slide 2">
           </div>
           <div class="carousel-item">
-            <img src="/resources/https___cdn.evbuc.com_images_641653599_868515626953_1_original.jpg" class="d-block w-50" alt="secondSlide">
-          </div>
-          <div class="carousel-item">
-            <img src="/resources/https___cdn.evbuc.com_images_647891039_1642573265253_1_original.jpg" class="d-block w-50" alt="thirdSlide">
+            <img src="/resources/https___cdn.evbuc.com_images_596145489_223287819690_1_original.jpg" class="d-block w-100" alt="Slide 3">
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
