custom styling stuff

--- a/views/helpGenZ.ejs
+++ b/views/helpGenZ.ejs
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/styles.css">
+    <script defer src="/scripts/scripts.js"></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <section>
+        <h1>You're from:</h1>
+        <h1>Gen Z</h1>
+    </section>
+
+    <section>
+        <h2>Your generation may suffer more from:</h2>
+        <h2>Depression</h2>
+        <h2>Worriedness</h2>
+        <h2>Distractions</h2>
+        <h2>When compared with other generations</h2>
+    </section>
 </body>
 </html>
