--- a/views/helpGenZ.ejs
+++ b/views/helpGenZ.ejs
@@ -10,14 +10,14 @@
 <body>
     <section>
         <h1>You're from:</h1>
-        <h1>Gen Z</h1>
+        <h1 class="hidden">Gen Z</h1>
     </section>
 
     <section>
         <h2>Your generation may suffer more from:</h2>
-        <h2>Depression</h2>
-        <h2>Worriedness</h2>
-        <h2>Distractions</h2>
+        <h2 class="hidden">Depression</h2>
+        <h2 class="hidden">Worriedness</h2>
+        <h2 class="hidden">Distractions</h2>
         <h2>When compared with other generations</h2>
     </section>
 </body>
