--- a/css/styles.css
+++ b/css/styles.css
@@ -12,5 +12,18 @@ section{
     min-height: 100vh;
 }
 
+.hidden {
+    opacity: 0;
+    filter: blur(10px);
+    transform: translateX(-50%);
+    transition: all 1s;
+}
+
+.show {
+    opacity: 1;
+    filter: blur(0px);
+    transform: translateX(0%);
+}
+
 
 
