--- a/views/home.ejs
+++ b/views/home.ejs
@@ -60,7 +60,8 @@
             </div>
         </div>
       </div>
-    
+    <br>
+    <br>
     <br>
     <h1 class="text-center fs-3 fw-bold">Worried? Stressed? Tired? <br> </h1>
     <h2 class ="text-center fs-4 fw-bold">Find Events on Mental Health Near You</h2>
@@ -93,6 +94,26 @@
       </div>
       <br>
       <br>
-      <h1 class="text-center fs-3 fw-bold">"Social media are responsible for aggravating mental health problems." <br> National Institute of Health</h1>
+      <div class="card">
+        <div class="card-body">
+          <blockquote class="blockquote mb-0">
+            <p>"Social media are responsible for aggravating mental health problems."</p>
+            <footer class="blockquote-footer"><cite title="Source Title">National Institute of Health</cite></footer>
+          </blockquote>
+        </div>
+      </div>
+      <br>
+      <br>
+
+      <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+          <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Home</a></li>
+          <li class="nav-item"><a href="/survey" class="nav-link px-2 text-muted">Survey</a></li>
+          <li class="nav-item"><a href="/dashboard" class="nav-link px-2 text-muted">Stats</a></li>
+          <li class="nav-item"><a href="/login" class="nav-link px-2 text-muted">Login</a></li>
+        </ul>
+        <p class="text-center text-muted">© 2022 Company, Inc</p>
+      </footer>
+     
 </body>
 </html>
